[gd_scene load_steps=9 format=3 uid="uid://b56wowb7h43jt"]

[ext_resource type="PackedScene" uid="uid://dg4owa6nmkg5p" path="res://player.tscn" id="1_l76a0"]
[ext_resource type="Script" path="res://scripts/survivors_game.gd" id="1_wliv3"]
[ext_resource type="PackedScene" uid="uid://0mt01y746o0u" path="res://mob_spawner.tscn" id="2_dp3yl"]
[ext_resource type="PackedScene" uid="uid://hv04wpkipgtr" path="res://weak_slime.tscn" id="3_3i81c"]
[ext_resource type="Script" path="res://scripts/spawn_info.gd" id="4_e158m"]

[sub_resource type="Resource" id="Resource_b8kcp"]
script = ExtResource("4_e158m")
time_start = 0
time_end = 30
enemy = ExtResource("3_3i81c")
enemy_num = 1
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_cu5cr"]
script = ExtResource("4_e158m")
time_start = 30
time_end = 60
enemy = ExtResource("3_3i81c")
enemy_num = 2
enemy_spawn_delay = 0

[sub_resource type="Curve2D" id="Curve2D_paqma"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -75, -89, 0, 0, 0, 0, 1981, -84, 0, 0, 0, 0, 1991, 1126, 0, 0, 0, 0, -80, 1121, 0, 0, 0, 0, -75, -89)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_wliv3")

[node name="MobSpawner" parent="." instance=ExtResource("2_dp3yl")]
y_sort_enabled = true
spawns = Array[ExtResource("4_e158m")]([SubResource("Resource_b8kcp"), SubResource("Resource_cu5cr")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player" parent="." instance=ExtResource("1_l76a0")]
position = Vector2(959, 544)
motion_mode = 1

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-959, -541)
curve = SubResource("Curve2D_paqma")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-75, -89)
rotation = 0.0024319

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="DarkPanel" type="PanelContainer" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="LabelButtonsSplit" type="VBoxContainer" parent="GameOver/DarkPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverPunk" type="Label" parent="GameOver/DarkPanel/LabelButtonsSplit"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Game Over, Punk!"

[node name="RestartMenuSplit" type="HBoxContainer" parent="GameOver/DarkPanel/LabelButtonsSplit"]
layout_mode = 2

[node name="Restart" type="Button" parent="GameOver/DarkPanel/LabelButtonsSplit/RestartMenuSplit"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 45
text = "Restart"

[node name="ReferenceRect" type="ReferenceRect" parent="GameOver/DarkPanel/LabelButtonsSplit/RestartMenuSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
border_color = Color(1, 0, 0, 0)

[node name="Menu" type="Button" parent="GameOver/DarkPanel/LabelButtonsSplit/RestartMenuSplit"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 45
text = "Menu"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="pressed" from="GameOver/DarkPanel/LabelButtonsSplit/RestartMenuSplit/Restart" to="." method="_on_restart_pressed"]
